src/gen/AngularaParser.java
// Generated from C:/Users/hp/Desktop/final/src/AngularaParser.g4 by ANTLR 4.13.2
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORT=1, SLASH=2, FROM=3, EXPORT=4, DEFAULT=5, CLASS=6, INTERFACE=7, 
		AT=8, NULL=9, EXTENDS=10, CONSTRUCTOR=11, IF=12, ELSE=13, LET=14, CONST=15, 
		NEW=16, THIS=17, COMPONENT=18, SELECTOR=19, STANDALONE=20, IMPORTS=21, 
		TEMPLATE=22, STYLE_URLS=23, STRING_TYPE=24, NUMBER_TYPE=25, BOOLEAN_TYPE=26, 
		VOID=27, AS=28, DOCTYPE=29, HTML=30, HEAD=31, BODY=32, META=33, TITLE=34, 
		BASE=35, LINK=36, ASSIGN=37, EQ=38, NE=39, EQ_STRICT=40, NE_STRICT=41, 
		PLUS=42, MINUS=43, MULTIPLY=44, DIVIDE=45, MODULO=46, LOGICAL_AND=47, 
		LOGICAL_OR=48, ARROW=49, SPREAD=50, EXCLAMATION=51, SEMI_Q=52, COMMA=53, 
		COLON=54, DOT=55, LBRACE=56, RBRACE=57, LPAREN=58, RPAREN=59, LBRACK=60, 
		RBRACK=61, BACKTICK=62, DOLLAR=63, LT=64, GT=65, QUESTION=66, IMPLEMENTS=67, 
		PRIVATE=68, PUBLIC=69, PROTECTED=70, PIPE=71, BOOLEAN_LITERAL=72, NUMBER=73, 
		TEMPLATE_STR=74, STRING=75, IDENTIFIER=76, WS=77, LINE_COMMENT=78, BLOCK_COMMENT=79;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_importStatement = 2, RULE_importClause = 3, 
		RULE_importItems = 4, RULE_componentDefinition = 5, RULE_componentMetadata = 6, 
		RULE_componentMetadataPropertyList = 7, RULE_componentMetadataProperty = 8, 
		RULE_classDeclaration = 9, RULE_decorator = 10, RULE_exportStatement = 11, 
		RULE_exportDefault = 12, RULE_classBody = 13, RULE_classElement = 14, 
		RULE_constructorDeclaration = 15, RULE_methodDeclaration = 16, RULE_paramList = 17, 
		RULE_param = 18, RULE_accessModifier = 19, RULE_fieldDeclaration = 20, 
		RULE_interfaceDeclaration = 21, RULE_interfaceBody = 22, RULE_interfaceProperty = 23, 
		RULE_typeAnnotation = 24, RULE_typeName = 25, RULE_typeArguments = 26, 
		RULE_typeAnnotationWithArray = 27, RULE_genericArguments = 28, RULE_genericTypeList = 29, 
		RULE_block = 30, RULE_statementInside = 31, RULE_variableDeclaration = 32, 
		RULE_destructuringAssignment = 33, RULE_destructuringList = 34, RULE_ifStatement = 35, 
		RULE_expressionStatement = 36, RULE_expression = 37, RULE_assignmentExpression = 38, 
		RULE_conditionalExpression = 39, RULE_logicalOrExpression = 40, RULE_logicalAndExpression = 41, 
		RULE_equalityExpression = 42, RULE_relationalExpression = 43, RULE_additiveExpression = 44, 
		RULE_multiplicativeExpression = 45, RULE_unaryExpression = 46, RULE_postfixExpression = 47, 
		RULE_primaryExpressionWithAssertion = 48, RULE_postfixAssertion = 49, 
		RULE_postfixOperator = 50, RULE_primaryExpression = 51, RULE_arrowFunction = 52, 
		RULE_arrowParameters = 53, RULE_parameterList = 54, RULE_parameter = 55, 
		RULE_arrowBody = 56, RULE_argumentList = 57, RULE_literal = 58, RULE_value = 59, 
		RULE_arrayLiteral = 60, RULE_objectLiteral = 61, RULE_objectProperty = 62, 
		RULE_htmlDocument = 63, RULE_htmlElement = 64, RULE_htmlTagName = 65, 
		RULE_htmlContent = 66, RULE_attribute = 67;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "importStatement", "importClause", "importItems", 
			"componentDefinition", "componentMetadata", "componentMetadataPropertyList", 
			"componentMetadataProperty", "classDeclaration", "decorator", "exportStatement", 
			"exportDefault", "classBody", "classElement", "constructorDeclaration", 
			"methodDeclaration", "paramList", "param", "accessModifier", "fieldDeclaration", 
			"interfaceDeclaration", "interfaceBody", "interfaceProperty", "typeAnnotation", 
			"typeName", "typeArguments", "typeAnnotationWithArray", "genericArguments", 
			"genericTypeList", "block", "statementInside", "variableDeclaration", 
			"destructuringAssignment", "destructuringList", "ifStatement", "expressionStatement", 
			"expression", "assignmentExpression", "conditionalExpression", "logicalOrExpression", 
			"logicalAndExpression", "equalityExpression", "relationalExpression", 
			"additiveExpression", "multiplicativeExpression", "unaryExpression", 
			"postfixExpression", "primaryExpressionWithAssertion", "postfixAssertion", 
			"postfixOperator", "primaryExpression", "arrowFunction", "arrowParameters", 
			"parameterList", "parameter", "arrowBody", "argumentList", "literal", 
			"value", "arrayLiteral", "objectLiteral", "objectProperty", "htmlDocument", 
			"htmlElement", "htmlTagName", "htmlContent", "attribute"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", null, "'from'", "'export'", "'default'", "'class'", 
			"'interface'", "'@'", "'null'", "'extends'", "'constructor'", "'if'", 
			"'else'", "'let'", "'const'", "'new'", "'this'", "'@Component'", "'selector'", 
			"'standalone'", "'imports'", "'template'", "'styleUrls'", "'string'", 
			"'number'", "'boolean'", "'void'", "'as'", null, "'html'", "'head'", 
			"'body'", "'meta'", "'title'", "'base'", "'link'", "'='", "'=='", "'!='", 
			"'==='", "'!=='", "'+'", "'-'", "'*'", null, "'%'", "'&&'", "'||'", "'=>'", 
			"'...'", "'!'", "';'", "','", "':'", "'.'", "'{'", "'}'", "'('", "')'", 
			"'['", "']'", "'`'", "'$'", "'<'", "'>'", "'?'", "'implements'", "'private'", 
			"'public'", "'protected'", "'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IMPORT", "SLASH", "FROM", "EXPORT", "DEFAULT", "CLASS", "INTERFACE", 
			"AT", "NULL", "EXTENDS", "CONSTRUCTOR", "IF", "ELSE", "LET", "CONST", 
			"NEW", "THIS", "COMPONENT", "SELECTOR", "STANDALONE", "IMPORTS", "TEMPLATE", 
			"STYLE_URLS", "STRING_TYPE", "NUMBER_TYPE", "BOOLEAN_TYPE", "VOID", "AS", 
			"DOCTYPE", "HTML", "HEAD", "BODY", "META", "TITLE", "BASE", "LINK", "ASSIGN", 
			"EQ", "NE", "EQ_STRICT", "NE_STRICT", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", 
			"MODULO", "LOGICAL_AND", "LOGICAL_OR", "ARROW", "SPREAD", "EXCLAMATION", 
			"SEMI_Q", "COMMA", "COLON", "DOT", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
			"LBRACK", "RBRACK", "BACKTICK", "DOLLAR", "LT", "GT", "QUESTION", "IMPLEMENTS", 
			"PRIVATE", "PUBLIC", "PROTECTED", "PIPE", "BOOLEAN_LITERAL", "NUMBER", 
			"TEMPLATE_STR", "STRING", "IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public HtmlDocumentContext htmlDocument() {
			return getRuleContext(HtmlDocumentContext.class,0);
		}
		public TerminalNode EOF() { return getToken(AngularaParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				htmlDocument();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1515474605115429842L) != 0) || ((((_la - 68)) & ~0x3f) == 0 && ((1L << (_la - 68)) & 503L) != 0)) {
					{
					{
					setState(137);
					statement();
					}
					}
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(143);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public ComponentDefinitionContext componentDefinition() {
			return getRuleContext(ComponentDefinitionContext.class,0);
		}
		public DecoratorContext decorator() {
			return getRuleContext(DecoratorContext.class,0);
		}
		public ExportStatementContext exportStatement() {
			return getRuleContext(ExportStatementContext.class,0);
		}
		public ExportDefaultContext exportDefault() {
			return getRuleContext(ExportDefaultContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public MethodDeclarationContext methodDeclaration() {
			return getRuleContext(MethodDeclarationContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				importStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				componentDefinition();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(148);
				decorator();
				setState(149);
				exportStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(151);
				exportStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(152);
				exportDefault();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(153);
				classDeclaration();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(154);
				variableDeclaration();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(155);
				expressionStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(156);
				methodDeclaration();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(157);
				ifStatement();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(158);
				interfaceDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(AngularaParser.IMPORT, 0); }
		public ImportClauseContext importClause() {
			return getRuleContext(ImportClauseContext.class,0);
		}
		public TerminalNode FROM() { return getToken(AngularaParser.FROM, 0); }
		public TerminalNode STRING() { return getToken(AngularaParser.STRING, 0); }
		public TerminalNode SEMI_Q() { return getToken(AngularaParser.SEMI_Q, 0); }
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(IMPORT);
			setState(162);
			importClause();
			setState(163);
			match(FROM);
			setState(164);
			match(STRING);
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI_Q) {
				{
				setState(165);
				match(SEMI_Q);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportClauseContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(AngularaParser.IDENTIFIER, 0); }
		public TerminalNode LBRACE() { return getToken(AngularaParser.LBRACE, 0); }
		public ImportItemsContext importItems() {
			return getRuleContext(ImportItemsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(AngularaParser.RBRACE, 0); }
		public ImportClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterImportClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitImportClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitImportClause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportClauseContext importClause() throws RecognitionException {
		ImportClauseContext _localctx = new ImportClauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importClause);
		try {
			setState(173);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(168);
				match(IDENTIFIER);
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				match(LBRACE);
				setState(170);
				importItems();
				setState(171);
				match(RBRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportItemsContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(AngularaParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AngularaParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AngularaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngularaParser.COMMA, i);
		}
		public ImportItemsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importItems; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterImportItems(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitImportItems(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitImportItems(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportItemsContext importItems() throws RecognitionException {
		ImportItemsContext _localctx = new ImportItemsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importItems);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(IDENTIFIER);
			setState(180);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(176);
					match(COMMA);
					setState(177);
					match(IDENTIFIER);
					}
					} 
				}
				setState(182);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(183);
				match(COMMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentDefinitionContext extends ParserRuleContext {
		public TerminalNode COMPONENT() { return getToken(AngularaParser.COMPONENT, 0); }
		public TerminalNode LPAREN() { return getToken(AngularaParser.LPAREN, 0); }
		public ComponentMetadataContext componentMetadata() {
			return getRuleContext(ComponentMetadataContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(AngularaParser.RPAREN, 0); }
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public ComponentDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterComponentDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitComponentDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitComponentDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentDefinitionContext componentDefinition() throws RecognitionException {
		ComponentDefinitionContext _localctx = new ComponentDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_componentDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			match(COMPONENT);
			setState(187);
			match(LPAREN);
			setState(188);
			componentMetadata();
			setState(189);
			match(RPAREN);
			setState(191);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(190);
				classDeclaration();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentMetadataContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(AngularaParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(AngularaParser.RBRACE, 0); }
		public ComponentMetadataPropertyListContext componentMetadataPropertyList() {
			return getRuleContext(ComponentMetadataPropertyListContext.class,0);
		}
		public ComponentMetadataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentMetadata; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterComponentMetadata(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitComponentMetadata(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitComponentMetadata(this);
			else return visitor.visitChildren(this);
		}
	}
